Add log_dir option to logger

--- a/Utilities/CMakeLists.txt
+++ b/Utilities/CMakeLists.txt
@@ -5,4 +5,6 @@ endif ()
 add_library(IOs SHARED
         input.cpp
         input.h
-        argparse.h)
+        argparse.h
+        logger.h
+        logger.cpp)
