Add ScanTest for parallel scan functionality

--- a/Tests/CMakeLists.txt
+++ b/Tests/CMakeLists.txt
@@ -4,6 +4,7 @@ set(TESTS
         AXpYCorrectnessTest
         AXpYParallelTest
         SpMVCorrectnessTest
+        ScanTest
         CSRTransposeTest
         CSRBuildAdjacencyMatrixTest
         CSRIncidenceTest
