Move scan to separate file

--- a/Solver/Kernels/CMakeLists.txt
+++ b/Solver/Kernels/CMakeLists.txt
@@ -1,7 +1,9 @@
 add_library(MathFunc SHARED
         mathfunc.cpp
         mathfunc.h
-        )
+        scan.cpp
+        scan.h
+)
 
 target_include_directories(MathFunc PUBLIC ${PROJECT_SOURCE_DIR})
 
@@ -9,7 +11,9 @@ target_include_directories(MathFunc PUBLIC ${PROJECT_SOURCE_DIR})
 if (USE_CUDA)
         add_library(MathFuncCUDA STATIC
                 mathfunc.cu
-                mathfunc.cuh)
+                mathfunc.cuh
+                scan.cpp
+                scan.h)
 
         target_include_directories(MathFuncCUDA PUBLIC ${PROJECT_SOURCE_DIR} ${CUDAToolkit_INCLUDE_DIRS})
         set_target_properties(MathFuncCUDA PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
