Add CUDA measures

--- a/Tests/Time/CMakeLists.txt
+++ b/Tests/Time/CMakeLists.txt
@@ -33,3 +33,24 @@ foreach (MEASURE ${MEASURES})
     target_include_directories(${MEASURE} PUBLIC ${PROJECT_SOURCE_DIR})
 
 endforeach ()
+
+if (USE_CUDA)
+    set(CUDA_MEASURES
+            DotMeasureCUDA
+            AXpYMeasureCUDA
+            SpMVMeasureCUDA
+            CGSolverMeasureCUDA
+    )
+
+    foreach (MEASURE ${CUDA_MEASURES})
+        set(MEASURE_SOURCE ${MEASURE}.cu)
+
+        add_executable(${MEASURE} ${MEASURE_SOURCE} ${PROJECT_SOURCE_DIR}/Solver/csr.cpp ${PROJECT_SOURCE_DIR}/Solver/solvers.cu)
+        add_dependencies(${MEASURE} MathFuncCUDA)
+        target_link_libraries(${MEASURE} PUBLIC MathFuncCUDA OpenMP::OpenMP_CXX IOs)
+        target_include_directories(${MEASURE} PUBLIC ${PROJECT_SOURCE_DIR})
+        set_target_properties(${MEASURE} PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
+        target_compile_options(${MEASURE} PRIVATE $<$<COMPILE_LANGUAGE:CUDA>: -Xcompiler=-fopenmp>)
+        target_compile_features(${MEASURE} PRIVATE cxx_std_14 cuda_std_14)
+    endforeach ()
+endif ()
