Fix CMake configs

--- a/Tests/Time/CMakeLists.txt
+++ b/Tests/Time/CMakeLists.txt
@@ -9,33 +9,35 @@ if (NOT USE_MPI)
     set(MEASURES ${MEASURES} CSRAdjacencyMeasure)
 endif ()
 
-foreach (MEASURE ${MEASURES})
-#    cmake_path(GET MEASURE_SOURCE STEM MEASURE)
-    set(MEASURE_SOURCE ${MEASURE}.cpp)
+if (NOT USE_CUDA)
+    foreach (MEASURE ${MEASURES})
+    #    cmake_path(GET MEASURE_SOURCE STEM MEASURE)
+        set(MEASURE_SOURCE ${MEASURE}.cpp)
 
-    if ((${MEASURE} STREQUAL "SpMVMeasure") OR (${MEASURE} STREQUAL "CSRAdjacencyMeasure"))
-        add_executable(${MEASURE} ${MEASURE_SOURCE} ${PROJECT_SOURCE_DIR}/Solver/csr.cpp)
-        add_dependencies(${MEASURE} IOs)
-        target_link_libraries(${MEASURE} PUBLIC IOs)
-        if (USE_MPI)
-            target_link_libraries(${MEASURE} PUBLIC Coms)
+        if ((${MEASURE} STREQUAL "SpMVMeasure") OR (${MEASURE} STREQUAL "CSRAdjacencyMeasure"))
+            add_executable(${MEASURE} ${MEASURE_SOURCE} ${PROJECT_SOURCE_DIR}/Solver/csr.cpp)
+            add_dependencies(${MEASURE} IOs)
+            target_link_libraries(${MEASURE} PUBLIC IOs)
+            if (USE_MPI)
+                target_link_libraries(${MEASURE} PUBLIC Coms)
+            endif ()
+        elseif (${MEASURE} STREQUAL "CGSolverMeasure")
+            add_executable(${MEASURE} ${MEASURE_SOURCE} ${PROJECT_SOURCE_DIR}/Solver/csr.cpp ${PROJECT_SOURCE_DIR}/Solver/solvers.cpp)
+            add_dependencies(${MEASURE} IOs)
+            target_link_libraries(${MEASURE} PUBLIC IOs)
+            if (USE_MPI)
+                target_link_libraries(${MEASURE} PUBLIC Coms)
+            endif ()
+        else ()
+            add_executable(${MEASURE} ${MEASURE_SOURCE})
         endif ()
-    elseif (${MEASURE} STREQUAL "CGSolverMeasure")
-        add_executable(${MEASURE} ${MEASURE_SOURCE} ${PROJECT_SOURCE_DIR}/Solver/csr.cpp ${PROJECT_SOURCE_DIR}/Solver/solvers.cpp)
-        add_dependencies(${MEASURE} IOs)
-        target_link_libraries(${MEASURE} PUBLIC IOs)
-        if (USE_MPI)
-            target_link_libraries(${MEASURE} PUBLIC Coms)
-        endif ()
-    else ()
-        add_executable(${MEASURE} ${MEASURE_SOURCE})
-    endif ()
 
-    add_dependencies(${MEASURE} MathFunc)
-    target_link_libraries(${MEASURE} PUBLIC MathFunc)
-    target_include_directories(${MEASURE} PUBLIC ${PROJECT_SOURCE_DIR})
+        add_dependencies(${MEASURE} MathFunc)
+        target_link_libraries(${MEASURE} PUBLIC MathFunc)
+        target_include_directories(${MEASURE} PUBLIC ${PROJECT_SOURCE_DIR})
 
-endforeach ()
+    endforeach ()
+endif ()
 
 if (USE_CUDA)
     set(CUDA_MEASURES
