Fix test config

--- a/Tests/CMakeLists.txt
+++ b/Tests/CMakeLists.txt
@@ -33,6 +33,8 @@ if (NOT USE_MPI)
         )
         if (${TEST} MATCHES ".*Parallel.*")
             set_property(TEST ${TEST} PROPERTY ENVIRONMENT "OMP_NUM_THREADS=4")
+        else ()
+            set_property(TEST ${TEST} PROPERTY ENVIRONMENT "OMP_NUM_THREADS=1")
         endif ()
     endforeach ()
 endif ()
