Improve CUDA cmake

--- a/Solver/Kernels/CMakeLists.txt
+++ b/Solver/Kernels/CMakeLists.txt
@@ -15,7 +15,7 @@ if (USE_CUDA)
                 scan.cpp
                 scan.h)
 
-        target_include_directories(MathFuncCUDA PUBLIC ${PROJECT_SOURCE_DIR} ${CUDAToolkit_INCLUDE_DIRS})
+        target_include_directories(MathFuncCUDA PUBLIC ${PROJECT_SOURCE_DIR})
         set_target_properties(MathFuncCUDA PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
         target_sources(MathFuncCUDA PUBLIC ${PROJECT_SOURCE_DIR}/Utilities/cuda_helper.cuh)
 endif ()
